# worldmodel

./: .gitignore  config.yaml  main.py  pyproject.toml
jobs/: actorcritic.sh  download.sh  jepa.sh
src/: actorcritic.py  data.py  jepa.py  modules.py  test.py  test_jepa.py  util.py
