[project]
name = "worldmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hydra-core>=1.3.4",
    "lightning>=2.6.5",
    "numpy>=2.5.1",
    "omegaconf>=2.3.1",
    "pandas>=3.0.3",
    "python-binance>=1.0.37",
    "requests>=2.34.2",
    "torch>=2.13.0",
]
