[project]
name = "worldmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hydra-core>=1.3.4",
    "lightning>=2.6.5",
    "logging>=0.4.9.6",
    "numpy>=2.5.1",
    "omegaconf>=2.3.1",
    "pandas>=3.0.3",
    "python-binance>=1.0.37",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "wandb>=0.28.0",
]
[tool.setuptools.packages.find]
where = ["src"] 
